@@ -90,6 +90,23 @@ name|solr
 operator|.
 name|common
 operator|.
+name|cloud
+operator|.
+name|ZkStateReader
+operator|.
+name|ONLY_IF_DOWN
+import|;
+end_import
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|params
 operator|.
 name|CollectionParams
@@ -6474,6 +6491,76 @@ name|l
 argument_list|,
 literal|','
 argument_list|)
+argument_list|)
+throw|;
+block|}
+comment|// If users are being safe and only want to remove a shard if it is down, they can specify onlyIfDown=true
+comment|// on the command.
+if|if
+condition|(
+name|Boolean
+operator|.
+name|parseBoolean
+argument_list|(
+name|message
+operator|.
+name|getStr
+argument_list|(
+name|ONLY_IF_DOWN
+argument_list|)
+argument_list|)
+operator|&&
+name|ZkStateReader
+operator|.
+name|DOWN
+operator|.
+name|equals
+argument_list|(
+name|replica
+operator|.
+name|getStr
+argument_list|(
+name|ZkStateReader
+operator|.
+name|STATE_PROP
+argument_list|)
+argument_list|)
+operator|==
+literal|false
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Attempted to remove replica : "
+operator|+
+name|collectionName
+operator|+
+literal|"/"
+operator|+
+name|shard
+operator|+
+literal|"/"
+operator|+
+name|replicaName
+operator|+
+literal|" with onlyIfDown='true', but state is '"
+operator|+
+name|replica
+operator|.
+name|getStr
+argument_list|(
+name|ZkStateReader
+operator|.
+name|STATE_PROP
+argument_list|)
+operator|+
+literal|"'"
 argument_list|)
 throw|;
 block|}
